logs/dag_id=update_db/run_id=scheduled__2026-04-27T13:00:00+00:00/task_id=staging_table/attempt=1.log
[2026-04-29T07:20:39.890+0000] {local_task_job_runner.py:120} INFO - ::group::Pre task execution logs
[2026-04-29T07:20:39.906+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: update_db.staging_table scheduled__2026-04-27T13:00:00+00:00 [queued]>
[2026-04-29T07:20:39.911+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: update_db.staging_table scheduled__2026-04-27T13:00:00+00:00 [queued]>
[2026-04-29T07:20:39.912+0000] {taskinstance.py:2306} INFO - Starting attempt 1 of 1
[2026-04-29T07:20:39.921+0000] {taskinstance.py:2330} INFO - Executing <Task(_PythonDecoratedOperator): staging_table> on 2026-04-27 13:00:00+00:00
[2026-04-29T07:20:39.924+0000] {standard_task_runner.py:63} INFO - Started process 3186 to run task
[2026-04-29T07:20:39.929+0000] {standard_task_runner.py:90} INFO - Running: ['airflow', 'tasks', 'run', 'update_db', 'staging_table', 'scheduled__2026-04-27T13:00:00+00:00', '--job-id', '19', '--raw', '--subdir', 'DAGS_FOLDER/main.py', '--cfg-path', '/tmp/tmpssgp3n7s']
[2026-04-29T07:20:39.929+0000] {standard_task_runner.py:91} INFO - Job 19: Subtask staging_table
[2026-04-29T07:20:39.963+0000] {task_command.py:426} INFO - Running <TaskInstance: update_db.staging_table scheduled__2026-04-27T13:00:00+00:00 [running]> on host e1e8c06c5b34
[2026-04-29T07:20:40.012+0000] {taskinstance.py:2648} INFO - Exporting env vars: AIRFLOW_CTX_DAG_EMAIL='data@engineers.com' AIRFLOW_CTX_DAG_OWNER='dataengineers' AIRFLOW_CTX_DAG_ID='update_db' AIRFLOW_CTX_TASK_ID='staging_table' AIRFLOW_CTX_EXECUTION_DATE='2026-04-27T13:00:00+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='scheduled__2026-04-27T13:00:00+00:00'
[2026-04-29T07:20:40.013+0000] {taskinstance.py:430} INFO - ::endgroup::
[2026-04-29T07:20:40.024+0000] {base.py:84} INFO - Using connection ID 'postgres_db_yt_elt' for task execution.
[2026-04-29T07:20:40.035+0000] {data_loading.py:12} INFO - Processing file: YT_data_2026-04-29
[2026-04-29T07:20:40.041+0000] {base.py:84} INFO - Using connection ID 'postgres_db_yt_elt' for task execution.
[2026-04-29T07:20:40.043+0000] {dwh.py:53} ERROR - An error occurred during the update of staging table: syntax error at or near "EXISTSstaging"
LINE 1: CREATE SCHEMA IF NOT EXISTSstaging;
                             ^

[2026-04-29T07:20:40.043+0000] {taskinstance.py:441} INFO - ::group::Post task execution logs
[2026-04-29T07:20:40.043+0000] {taskinstance.py:2905} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.10/site-packages/airflow/models/taskinstance.py", line 465, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.10/site-packages/airflow/models/taskinstance.py", line 432, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.10/site-packages/airflow/models/baseoperator.py", line 401, in wrapper
    return func(self, *args, **kwargs)
  File "/home/airflow/.local/lib/python3.10/site-packages/airflow/decorators/base.py", line 265, in execute
    return_value = super().execute(context)
  File "/home/airflow/.local/lib/python3.10/site-packages/airflow/models/baseoperator.py", line 401, in wrapper
    return func(self, *args, **kwargs)
  File "/home/airflow/.local/lib/python3.10/site-packages/airflow/operators/python.py", line 235, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.10/site-packages/airflow/operators/python.py", line 252, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/datawarehouse/dwh.py", line 54, in staging_table
    raise e
  File "/opt/airflow/dags/datawarehouse/dwh.py", line 30, in staging_table
    create_schema(schema)
  File "/opt/airflow/dags/datawarehouse/data_utils.py", line 22, in create_schema
    cur.execute(schema_sql)
  File "/home/airflow/.local/lib/python3.10/site-packages/psycopg2/extras.py", line 236, in execute
    return super().execute(query, vars)
psycopg2.errors.SyntaxError: syntax error at or near "EXISTSstaging"
LINE 1: CREATE SCHEMA IF NOT EXISTSstaging;
                             ^

[2026-04-29T07:20:40.050+0000] {taskinstance.py:1206} INFO - Marking task as FAILED. dag_id=update_db, task_id=staging_table, run_id=scheduled__2026-04-27T13:00:00+00:00, execution_date=20260427T130000, start_date=20260429T072039, end_date=20260429T072040
[2026-04-29T07:20:40.058+0000] {standard_task_runner.py:110} ERROR - Failed to execute job 19 for task staging_table (syntax error at or near "EXISTSstaging"
LINE 1: CREATE SCHEMA IF NOT EXISTSstaging;
                             ^
; 3186)
[2026-04-29T07:20:40.066+0000] {local_task_job_runner.py:240} INFO - Task exited with return code 1
[2026-04-29T07:20:40.080+0000] {taskinstance.py:3503} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2026-04-29T07:20:40.082+0000] {local_task_job_runner.py:222} INFO - ::endgroup::
